# libpicacg

./: Cargo.toml
examples/: game.rs  login.rs
src/: api.rs  api_impl.rs  api_type.rs  error.rs  impl.rs  lib.rs  trait.rs  type.rs
