[package]
name = "libpicacg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
size_utils = { git = "https://github.com/verssionhack/size_utils.git" } 
chrono = "0.4.24"
